tests/ui/share-trait/share-trait-no-feature.stderr
error[E0658]: use of unstable library feature `share_trait`
  --> $DIR/share-trait-no-feature.rs:1:5
   |
LL | use std::clone::Share;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #156756 <https://github.com/rust-lang/rust/issues/156756> for more information
   = help: add `#![feature(share_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `share_trait`
  --> $DIR/share-trait-no-feature.rs:7:6
   |
LL | impl Share for Alias {}
   |      ^^^^^
   |
   = note: see issue #156756 <https://github.com/rust-lang/rust/issues/156756> for more information
   = help: add `#![feature(share_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `share_trait`
  --> $DIR/share-trait-no-feature.rs:10:21
   |
LL | fn share_generic<T: Share>(value: &T) -> T {
   |                     ^^^^^
   |
   = note: see issue #156756 <https://github.com/rust-lang/rust/issues/156756> for more information
   = help: add `#![feature(share_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `share_trait`
  --> $DIR/share-trait-no-feature.rs:18:13
   |
LL |     let _ = Share::share(&value);
   |             ^^^^^^^^^^^^
   |
   = note: see issue #156756 <https://github.com/rust-lang/rust/issues/156756> for more information
   = help: add `#![feature(share_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `share_trait`
  --> $DIR/share-trait-no-feature.rs:12:11
   |
LL |     value.share()
   |           ^^^^^
   |
   = note: see issue #156756 <https://github.com/rust-lang/rust/issues/156756> for more information
   = help: add `#![feature(share_trait)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
